--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,59 @@
-body{
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background-color: #e0e8ff;
+}
+
+main {
+  width: 90vw;
+  margin: 0 auto;
+  display: flex;
+  max-width: 500px;
+  text-align: center;
+  margin-top: 50px;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  flex-direction: column;
+  padding-bottom: 20px;
+  background-color: #ffffff;
+}
+
+h1 {
+  color: white;
+  width: 100%;
+  padding: 20px 10px;
+  font-size: 2rem;
+  margin-bottom: 10px;
+  background-color: #1b1096;
+}
+
+.output {
+  color: white;
+  padding: 10px 5px;
+  margin-top: 10px;
+  border-radius: 9999px;
+  background-color: #1b1096;
+}
+
+.output-section {
+  margin-top: 20px;
+}
+
+.input-section {
+  width: 70%;
+}
+
+.input-slider {
+  width: 100%;
+  margin-top: 5px;
+}
+
+.slider-output {
+  margin-top: 10px;
+  text-align: left;
 }
